# PROJET-TOP-2024

./: .gitignore  CMakeLists.txt  README.md  config.txt
include/: chrono.h  logging.h  types.h
include/stencil/: comm_handler.h  config.h  init.h  mesh.h  solve.h
reference/: result_100x100x100.txt  result_500x500x500.txt
scripts/: compare.py
src/: CMakeLists.txt  chrono.c  main.c
src/stencil/: comm_handler.c  config.c  init.c  mesh.c  solve.c
